2006-05-18  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/testlet/javax/imageio/stream/MemoryCacheImageInputStream/TestImageInputStreamImpl.java:
	Complete test.

2006-05-18  Anthony Balkissoon  <abalkiss@redhat.com>

	* Makefile.in: Regenerated.
	* aclocal.m4: Regenerated.

2006-05-18  Anthony Balkissoon  <abalkiss@redhat.com>

	* Harness.java:
	(getBootClassPath): Changed location of DetectBootclasspath because it
	is now an inner class of Harness rather than a separate source file
	in gnu/testlet.
	(Harness.DetectBootclasspath): New inner class.
	* gnu/testlet/DetectBootclasspath.java: Removed this file.

2006-05-18  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/java/awt/font/ShapeGraphicAttribute: New directory.
	* gnu/testlet/java/awt/font/ShapeGraphicAttribute/ShapeGraphicAttributeTest: New test.
	* gnu/testlet/java/awt/font/ImageGraphicAttribute/ImageGraphicAttributeTest.java: Added
	equals test.

2006-05-18  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/tree/TreePath/PR27651.java: New test.

2006-05-17  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/testlet/javax/imageio/stream/MemoryCacheImageInputStream/TestImageInputStreamImpl.java:
	New test.

2006-05-16  Lillian Angel  <langel@redhat.com>
	
	* gnu/testlet/java/awt/font/ImageGraphicAttribute: New directory
	* gnu/testlet/java/awt/font/ImageGraphicAttribute/ImageGraphicAttributeTest.java: New test.
	* gnu/testlet/java/awt/font/ImageGraphicAttribute/image.bmp: New bitmap used in test.

2006-05-16  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/DefaultButtonModel/addActionListener.java: 
	New file,
	* gnu/testlet/javax/swing/DefaultButtonModel/constants.java: Likewise,
	* gnu/testlet/javax/swing/DefaultButtonModel/constructor.java: 
	Likewise,
	* gnu/testlet/javax/swing/DefaultButtonModel/getSelectedObjects.java: 
	Likewise,
	* gnu/testlet/javax/swing/DefaultButtonModel/MyDefaultButtonModel.java:
	Likewise,