@@ -1,3 +1,9 @@
+2006-05-20  Raif S. Naffah  <raif@swiftdsl.com.au>
+
+	* gnu/testlet/gnu/javax/crypto/jce/keyring/TestOfKeystore.java: New test.
+	* gnu/testlet/gnu/javax/crypto/keyring/TestOfGnuPrivateKeyring.java:
+	Likewise.
+
 2006-05-18  Thomas Fitzsimmons  <fitzsim@redhat.com>
 
 	* gnu/testlet/javax/imageio/stream/MemoryCacheImageInputStream/TestImageInputStreamImpl.java:
